--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "firebase-admin": "^11.11.1",
+    "firebase-admin": "^13.0.2",
     "mongoose": "^8.0.3",
     "ws": "^8.14.2"
   },
@@ -24,5 +24,8 @@
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": "18.20.5"
   }
 }
