--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "express": "^4.18.2",
     "firebase-admin": "^13.0.2",
     "mongoose": "^8.0.3",
+    "winston": "^3.17.0",
     "ws": "^8.14.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
+    "@types/winston": "^2.4.4",
     "@types/ws": "^8.5.10",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
